--- a/Templates/pharmacy/pharamcy.html
+++ b/Templates/pharmacy/pharamcy.html
@@ -124,6 +124,12 @@
     <div id="toastMessage"></div>
 </div>
 
+    <script>
+        document.getElementById("aiHelperBtn").addEventListener("click", function() {
+            window.location.href = "/chatbot-page";
+        });
+    </script>
+
 <script src="{{ url_for('static', filename='scripts/pharmacy.js') }}"></script>
 
 </html>
